--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@element-plus/nuxt": "^1.1.1",
+    "@types/node": "^22.14.0",
     "@unocss/nuxt": "^66.1.0-beta.10",
     "@unocss/preset-wind": "^66.1.0-beta.10",
     "@unocss/reset": "^66.1.0-beta.10",
